<resources>
    <string name="app_name">Nvamp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="albums">Albums</string>
    <string name="folders">Folders</string>
    <string name="songs">Songs</string>
    <string name="artist">Artist</string>
    <string name="gener">Gener</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="dark_mode">Enable Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="options">Options</string>
    <string name="progresstitle">Collecting....</string>
</resources>